--- a/README
+++ b/README
@@ -24,3 +24,8 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 The views and conclusions contained in the software and documentation are those
 of the authors and should not be interpreted as representing official policies, 
 either expressed or implied, of the FreeBSD Project.
+
+ ------------------------------------------------------------------------------
+
+
+Join us at #gentoomansbrowser at Rizon, password is installgentoo
